name: KWON
version: 1.0.0
synopsis: the works for Prof. DoYong Kwon 
copyright: 2021, KiJeong Lim
build-type: Simple
cabal-version: >= 1.10
executable main
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, math-functions >= 0.3.4
    main-is: Main.hs
    other-modules: PCalc.hs
